8025260: Methodhandles/JSR292: NullPointerException (NPE) thrown instead of AbstractMethodError (AME)

Copied null-checks from templateInterpreter_CPU into methodHandles_CPU

Reviewed-by: jrose, twisti